Preparing for Virtual threads